# jjs-pastebin

./: .gitignore  CLI-README.md  Dockerfile  LICENSE  MANIFEST.in  PYPI-PUBLISHING.md  README.md  build-cli.py  config.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-cli.txt  requirements-dev.txt  requirements.txt  run.py  run_tests.py  setup-cli.py  setup.py
.github/workflows/: deploy-docs.yml  test.yml
app/: __init__.py  models.py
app/api/: auth.py  routes.py
app/auth/: forms.py  routes.py
app/web/: __init__.py  forms.py  routes.py
cli/: __init__.py  jj.py
docs/: README.md  api-docs.html  cli-tools.html  index.html
scripts/: update_admin_password.py
templates/: api_docs.html  base.html  cli_tools_docs.html  create_paste.html  edit_paste.html  index.html  language_filter.html  user_profile.html  view_paste.html
templates/auth/: login.html  register.html
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_cli.py  test_models.py  test_web.py
vim-plugin/: README.md  config.example  install.sh  jj-pastebin.txt  jj-pastebin.vim  test-vim-plugin.py
